kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reliability-restmonkey
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: restmonkey
        component: restmonkey
    spec:
      containers:
      - name: restmonkey
        image: peng-docker-prod.metroscales.io/reliability/restmonkey:latest
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /.well-known/live
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /.well-known/ready
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10

        resources:
          requests:
            memory: 50Mi
            cpu: 500m
          limits:
            memory: 100Mi
            cpu: 1
---
kind: Service
apiVersion: v1
metadata:
  name: restmonkey
  labels:
    app: restmonkey
    component: restmonkey
spec:
  selector:
    app: restmonkey
    component: restmonkey
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: restmonkey
    component: restmonkey
  name: restmonkey
spec:
  rules:
  - host: restmonkey.apps-api-k8s-002-test9-mcc-be-gcw1.metroscales.io
    http:
      paths:
      - backend:
          serviceName: restmonkey
          servicePort: 80
status:
  loadBalancer: {}
